<resources>
    <string name="app_name">Woo Stock Manager</string>
    <string name="add_new_store">Add new store</string>
    <string name="store_list">Store list</string>
    <string name="exit">Exit</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="enter_store_location">Enter store location</string>
    <string name="save_store">Save Store</string>
    <string name="consumer_key">Consumer Key</string>
    <string name="consumer_secret">Consumer Secret</string>
    <string name="save">Save</string>
    <string name="base_url">Base URL</string>
    <string name="store_name">Store Name</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="stock_status">Stock Status</string>
    <string name="enter_new_quantity">Enter new quantity</string>
    <string name="update">Update</string>
    <string-array name="stock_status_options">
        <item>instock</item>
        <item>outofstock</item>
    </string-array>
    <string name="exit_title">Exit App</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="empty_store_list_message">List of stores is empty, please first add a store!</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="store_with_same_name">Store with this name already exists!</string>
    <string name="store_saved">Store saved!</string>
    <string name="no_store_data_found">No store data found for</string>
    <string name="loaded_store">Loaded store:</string>
    <string name="no_store_selected">No store selected!</string>
    <string name="error_loading_products">Error loading products:</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="update_failed">Update failed</string>
    <string name="quantity_updated">Quantity updated!</string>
    <string name="failed_quantity_update">Failed to update quantity:</string>
    <string name="stock_status_updated">Stock status updated!</string>
    <string name="failed_stock_status_update">Failed to update stock status:</string>
    <string name="remove_store">Remove store</string>
    <string name="remove_store_title">Select a store to remove</string>
    <string name="remove_store_warning">Warning: Removing a store is permanent and cannot be undone!</string>
    <string name="confirm_remove_store">Confirm Store Removal</string>
    <string name="confirm_remove_store_message">Are you sure you want to remove %1$s?</string>
    <string name="store_removed">%1$s has been removed.</string>
    <string name="no_stores_to_remove">There are no stores to remove.</string>
    <string name="search_for_product">Search for…</string>
    <string name="next">Next</string>
    <string name="no_match_found">No results found.</string>
    <string name="product_list">Product list</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="orders_list">Orders list</string>
    <string name="resend_notification">Resend notification</string>
    <string name="order_number">Order #%1$d</string>
    <string name="order_date">Date: %1$s</string>
    <string name="order_status">Status: %1$s</string>
    <string name="order_total">Total: %1$s %2$s </string>
    <string name="no_orders_found">No orders found for selected period.</string>
    <string name="purge_all_only_for_w3_total_cache">Purge all (only for W3 TotalCache)</string>
    <string name="purge_all">Purge all is completed.</string>
    <string name="failed_purge_all">"Error when try to purge all: "</string>
    <string name="failed_nonce_fetch">"Error nonce fetch: "</string>
</resources>