<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btnAddStore"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/add_new_store" />

    <Button
        android:id="@+id/btnStoreList"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/store_list" />

    <Button
        android:id="@+id/btnRemoveStore"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/remove_store" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="8dp"
        android:backgroundTint="@color/red"
        android:text="@string/exit"
        android:textColor="@color/white" />
</LinearLayout>
