<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/productCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="14sp"/>

    <!-- Dropdown за stock status -->
    <Spinner
        android:id="@+id/stockStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stock_status_options"
        android:minHeight="48dp"/>

    <!-- Поле за количина -->
    <EditText
        android:id="@+id/stockQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_quantity"
        android:autofillHints="Enter quantity"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
</LinearLayout>
