<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Главна вертикална структура -->
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Spinner за категории -->
        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:spinnerMode="dropdown" />

        <!-- Поле за пребарување и копче "Next" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:weightSum="10" >

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="9"
                android:autofillHints="search"
                android:hint="@string/search_for_product"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxWidth="200dp"
                android:minWidth="96dp"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

        <!-- Листа на производи -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/product_list"
            android:importantForAccessibility="yes"/>
    </LinearLayout>

    <!-- Loading ProgressBar -->
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>
